app/[locale]/styles/partials/_button.scss
@use "./vars" as *;
@use "../mixins" as *;
@use "./mixins" as *;

.button {
  min-width: 164px;
  padding: 0.7rem;
  border-radius: var(--border-radius--lg);
  color: var(--color--white);
  font-family: inherit;
  text-align: center;
  background: var(--color--orange-4);

  a {
    color: var(--color--white);
  }

  @include useOnHover {
    background: var(--color--light-blue-3);

    a {
      color: var(--color--white);
    }
  }
  @include useOnClick {
    background: var(--color--light-blue-2);

    a {
      color: var(--color--white);
    }
  }

  &-switcher {
    @include flex(row, center, center);
    z-index: 10;
    width: 30px;
    height: 30px;
    border: none;
    cursor: pointer;
    background: transparent;
    transition: var(--transition);

    svg,
    path {
      width: 30px;
      height: 30px;
    }

    @include useOnHover {
      transform: scale(var(--scale));
    }
  }

  @keyframes spin {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(180deg);
    }
  }

  &-settings {
    z-index: 99;
    position: fixed;
    top: 70%;
    right: 2%;
    border-radius: var(--border-radius--rounded);
    background: var(--color--bg-light);

    &__right {
      right: calc(2% + 7px);
    }

    @media screen and (max-height: 450px) {
      top: 82%;
    }

    svg {
      width: 30px;
      height: 30px;

      @include useScreen("tablet-sm") {
        width: 40px;
        height: 40px;
      }
      @include useScreen("desktop-sm") {
        width: 50px;
        height: 50px;
      }
    }
  }

  &-icon {
    svg {
      fill: var(--color--light-brown);

      @include useOnHover {
        fill: var(--color--orange-4);
      }
      @include useOnClick {
        fill: var(--color--orange-2);
      }
    }

    &__close {
      z-index: 110;
      position: absolute;

      svg,
      path {
        width: 20px;
        height: 20px;
      }

      &-right {
        top: 20px;
        right: 20px;
      }

      &-left {
        left: 20px;
        top: 10px;
      }
    }
  }

  &-img {
    width: 100%;
  }

  &-withSvg {
    @include flex(row, center, center);
    gap: 1rem;

    &__success {
      margin-top: -0.4rem;
    }
  }
}
[data-theme="dark"] .button {
  color: var(--color--blue-grey-3);
  font-weight: var(--font-weight--normal-2);
  background: var(--color--light-blue-4);

  a {
    color: var(--color--blue-grey-3);
  }

  @include useOnHover {
    background: var(--color--orange-2);

    a {
      color: var(--color--blue-grey-3);
    }
  }
  @include useOnClick {
    background: var(--color--orange-1);

    a {
      color: var(--color--blue-grey-3);
    }
  }

  &-settings {
    background: var(--color--bg-dark);
  }

  &-icon {
    svg {
      fill: var(--color--peach);

      @include useOnHover {
        fill: var(--color--light-blue-4);
      }
      @include useOnClick {
        fill: var(--color--light-blue-2);
      }
    }
  }
}

